update spacing and seo issue fix home page
update spacing and seo issue fix home page

--- a/css/theme.css
+++ b/css/theme.css
@@ -1364,9 +1364,6 @@ select {
 .mt-\[40px\] {
   margin-top: 40px;
 }
-.mt-\[45px\] {
-  margin-top: 45px;
-}
 .mt-\[50px\] {
   margin-top: 50px;
 }
@@ -1635,9 +1632,6 @@ select {
 .w-\[246px\] {
   width: 246px;
 }
-.w-\[248px\] {
-  width: 248px;
-}
 .w-\[24px\] {
   width: 24px;
 }
@@ -1723,6 +1717,9 @@ select {
 .max-w-\[220px\] {
   max-width: 220px;
 }
+.max-w-\[248px\] {
+  max-width: 248px;
+}
 .max-w-\[250px\] {
   max-width: 250px;
 }
@@ -1731,6 +1728,9 @@ select {
 }
 .max-w-\[320px\] {
   max-width: 320px;
+}
+.max-w-\[330px\] {
+  max-width: 330px;
 }
 .max-w-\[400px\] {
   max-width: 400px;
@@ -1776,9 +1776,6 @@ select {
 }
 .max-w-xl {
   max-width: 36rem;
-}
-.max-w-\[330px\] {
-  max-width: 330px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -2451,6 +2448,9 @@ select {
 .\!pt-3 {
   padding-top: 0.75rem !important;
 }
+.pb-0 {
+  padding-bottom: 0px;
+}
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2501,9 +2501,6 @@ select {
 }
 .pb-\[45px\] {
   padding-bottom: 45px;
-}
-.pb-\[50px\] {
-  padding-bottom: 50px;
 }
 .pl-2 {
   padding-left: 0.5rem;
@@ -2778,9 +2775,6 @@ select {
 .font-semibold {
   font-weight: 600;
 }
-.uppercase {
-  text-transform: uppercase;
-}
 .lowercase {
   text-transform: lowercase;
 }
@@ -2995,7 +2989,10 @@ select {
     padding: 0px;
     margin: 0px;
 }
-html, body { height: 100%; overflow-x: hidden; }
+html, body { 
+    height: 100%; 
+    overflow-x: hidden; 
+}
 body{
     width: 100%;
     height: auto;
@@ -4540,8 +4537,8 @@ ul li, ol li{
     color: #FF4F04;
 }
 .stickysidenav{
-    max-width: 320px;
-    min-width: 237px;
+    max-width: 260px;
+    min-width: 260px;
 }
 .blog-data-show.stickysidenav{
     max-width: 237px;
@@ -5243,6 +5240,33 @@ input[type="range"].home-range-slider::-moz-range-thumb {
 #menu-footer-menu li{
     display: block;
   }
+.turquoiseBlue{
+    border: 1px solid #60E3D5;
+    background: linear-gradient(299deg, #60E3D5 0.1%, #309F94 100.1%);
+  }
+.burningOrange{
+    border: 1px solid #FF7B31;
+    background: linear-gradient(299deg, #FF7B31 0.1%, #EC9C52 100.1%);
+  }
+.cashmere{
+    border: 1px solid #ECC1A1;
+    background: linear-gradient(299deg, #ECC1A1 0.1%, #D09C76 100.1%);
+  }
+.denimBlue{
+    border: 1px solid #6098B3;
+    background: linear-gradient(299deg, #77BDDF 0.1%, #4F99BD 100.1%);
+  }
+.lightPurple{
+    border: 1px solid #9C68C9;
+    background: linear-gradient(299deg, #C282FA 0.1%, #913EDA 100.1%);
+  }
+.algaeGreen{
+    border: 1px solid #60E3D5;
+    background: linear-gradient(299deg, #62E9A0 0.1%, #309F5D 100.1%);
+  }
+.text-18{
+    font-size: 18px;
+  }
 @media (max-width: 800px) {
     .howItWorkHeading{
         transform: rotate(0deg);
@@ -5535,10 +5559,6 @@ input[type="range"].home-range-slider::-moz-range-thumb {
     margin-bottom: 2.25rem;
   }
 
-  .md\:mt-20 {
-    margin-top: 5rem;
-  }
-
   .md\:mt-28 {
     margin-top: 7rem;
   }
@@ -5549,6 +5569,10 @@ input[type="range"].home-range-slider::-moz-range-thumb {
 
   .md\:mt-\[90px\] {
     margin-top: 90px;
+  }
+
+  .md\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .md\:block {
@@ -6081,6 +6105,10 @@ input[type="range"].home-range-slider::-moz-range-thumb {
     padding-right: 2.5rem;
   }
 
+  .lg\:pr-\[20\%\] {
+    padding-right: 20%;
+  }
+
   .lg\:pr-\[60px\] {
     padding-right: 60px;
   }
@@ -6217,6 +6245,10 @@ input[type="range"].home-range-slider::-moz-range-thumb {
 
   .lg\:leading-\[62px\] {
     line-height: 62px;
+  }
+
+  .lg\:leading-\[74px\] {
+    line-height: 74px;
   }
 
   .lg\:leading-tight {
